# HuggingLigand

./: .gitignore  .gitlab-ci.yml  CITATION.cff  CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  embedding_test_log.txt  environment.yml  pyproject.toml  ruff.toml  run_embeddings.slurm  zenodo.json
HuggingLigand/: README.md  pyproject.toml
HuggingLigand/models/: chemberta_embedding.py
HuggingLigand/modules/: downloader.py
HuggingLigand/pipeline_blocks/: preembedding_block.py
HuggingLigand/tests/: test_prott5_embedder.py
docs/config/: api.rst  conf.py  generate_api_rst.py  index.rst
org/: meeting_050625.md  meeting_090625.md  meeting_170625.md  meeting_250625.md  project_pivoting_2025-06-12.md
public/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
public/.doctrees/: api.doctree  environment.pickle  index.doctree
public/_modules/: index.html
public/_modules/models/: chemberta_embedding.html  protT5_embedding.html
public/_modules/modules/: bindingdata.html  downloader.html  embedding_utils.html  loaders.html  reformatter.html
public/_modules/pipeline_blocks/: chemberta_embedding_block.html  preembedding_block.html  prott5_embedding_block.html
src/cli/: analysis.py  cli.py
src/config/: config.ini
src/models/: chemberta_embedding.py  protT5_embedding.py
src/modules/: bindingdata.py  downloader.py  embedding_utils.py  loader.py  loaders.py  reformatter.py
src/pipeline_blocks/: chemberta_embedding_block.py  embedding_block.py  preembedding_block.py  prott5_embedding_block.py
src/scripts/: analysis.py  cli.py  generate_embeddings.py
tests/: preembedding_run.py  test_bindingdata.py  test_chemberta_embedder.py  test_downloader.py  test_embedding_utils.py  test_loaders.py  test_preembedding.py  test_prott5_embedder.py  test_reformatter.py
