[project]
name = "huggingligand"
version = "0.1.0"
description = "Protein embedding and analysis with ProtT5"
authors = [
    {name = "RamyBoulos",email = "ramyboulos@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "click (>=8.2.1,<9.0.0)",
    "pandas (>=2.3.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.0"
