[tool.poetry]
name = "huggingligand"
version = "0.1.0"
description = "Protein embedding and analysis with ProtT5"
authors = [
    "Ramy Boulos",
    "Michael Hanna",
    "Justus Möller"
]
license = "MIT"
readme = "README.md"
packages = [
    { include = "models", from = "src" },
    { include = "modules", from = "src" },
    { include = "pipeline_blocks", from = "src" },
    { include = "scripts", from = "src" },
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = ">=2.7.1,<3.0.0"
transformers = ">=4.52.4,<5.0.0"
sentencepiece = ">=0.2.0,<0.3.0"
click = ">=8.2.1,<9.0.0"
pandas = ">=2.3.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
