[project]
name = "huggingligand"
version = "0.1.0"
description = "Protein embedding and analysis using ProtT5 and ChemBERTa"
authors = [
    {name = "RamyBoulos",email = "ramyboulos@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "click (>=8.2.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
